# bookworm

./: .dockerignore  .editorconfig  .env.template  .gitignore  Dockerfile  Makefile  Procfile  amvera.yml  app.py  bookworm.py  docker-compose.yaml  documents.py  forms.py  heroku.yml  justfile  pyproject.toml  requirements.dev.txt  requirements.in  requirements.txt  ruff.toml  utils.py
app/: documents.py  forms.py  generate.py  schemes.py  utils.py  views.py
static/: app.js  custom.css  rating.css
templates/: add_form.html  base.html  books_list.html  edit_form.html  reading_list.html  start.html  stats.html
tests/: conftest.py  factories.py  test_add_book.py  test_book_model.py  test_delete_book.py  test_edit_book.py  test_get_books.py  test_group_books.py  utils.py
