[project]
name = "bookworm"
version = "1.0"
requires-python = ">=3.14, <3.15"
dependencies = [
    "flask",
    "flask-httpauth",
    "flask-wtf",
    "funcy",
    "gunicorn",
    "jinja2",
    "matplotlib",
    "mongoengine",
    "pendulum",
    "pydantic",
    "python-dotenv",
    "whatever",
]

[dependency-groups]
dev = [
    "factory-boy",
    "ipdb",
    "pytest",
    "pytest-mock",
    "ruff",
]
